Bean Validation - 오브젝트 오류( @ScriptAssert() 사용 )

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -46,3 +46,7 @@ typeMismatch=타입 오류입니다.
 NotBlank={0} 공백X
 Range={0}, {2} ~ {1} 허용
 Max={0}, 최대 {1}
+
+# @ScriptAssert
+#ScriptAssert.item = 가격 * 수량은 10000원 이상이어야 합니다~~
+#ScriptAssert = 10000원 이상이어야 합니다~~
